# MapleMacro-Ver.C-

./: .gitignore  LICENSE.txt  MapleStoryMacro.sln  README.md
.github/: copilot-instructions.md
MapleHook/: MapleHook.h  README.md  dllmain.cpp  dllmain.exp  dllmain.lib
MapleStoryMacro/: App.xaml  App.xaml.cs  AppSettings.cs  CustomKeySlot.cs  CyberTextBox.cs  Form1.Designer.cs  Form1.cs  Form1.resx  KeyCaptureHelper.cs  KeySender.cs  KeyboardBlocker.cs  KeyboardHookDLL.cs  Logger.cs  MacroCoreNative.cs  MacroEvent.cs  MainWindow.Dialogs.cs  MainWindow.xaml  MainWindow.xaml.cs  MapleStoryMacro.csproj  MinimapTracker.cs  PlaybackStatistics.cs  PositionCorrector.cs  ProcessItem.cs  Program.cs  RegionSelector.cs  SafeCyberGroupBox.cs  ScriptCard.cs  ScriptCardEditor.cs  ScriptData.cs
MapleStoryMacro _BAK/: AppSettings.cs  CustomKeySlot.cs  Form1.Designer.cs  Form1.cs  MemoryScanner.cs  PlaybackStatistics.cs  Program.cs  ScriptData.cs  app.manifest
macro_core_rs/: Cargo.toml  build.bat
macro_core_rs/src/: game_hook.rs  hook.rs  lib.rs  sender.rs  types.rs
